[LibOS,common] Link protected files and cryptoadapter in LibOS
This is so that these modules can be used for encrypted files
implementation in LibOS.

Signed-off-by: Paweł Marczewski <pawel@invisiblethingslab.com>

--- a/LibOS/shim/src/meson.build
+++ b/LibOS/shim/src/meson.build
@@ -175,6 +175,8 @@ libos = shared_library('sysdb',
     ],
     dependencies: [
         common_dep,
+        cryptoadapter_dep,
+        protected_files_dep,
         libpal,
     ],
 
