--- a/Pal/src/host/Linux-SGX/meson.build
+++ b/Pal/src/host/Linux-SGX/meson.build
@@ -118,7 +118,7 @@ libpal_sgx = shared_library('pal',
 
     dependencies: [
         common_dep,
-        cryptoadapter_pal_dep,
+        cryptoadapter_dep,
         protected_files_dep,
     ],
 
