[LibOS] Add `type = "encrypted"` mounts
This adds a new filesystem called `chroot_encrypted`. It will eventually
replace PAL protected files, but it does not have all necessary features
for that yet (see `fs/encrypted.c` for a list of TODOs).

Signed-off-by: Paweł Marczewski <pawel@invisiblethingslab.com>

--- a/LibOS/shim/src/meson.build
+++ b/LibOS/shim/src/meson.build
@@ -15,6 +15,7 @@ libos_sources = files(
     'bookkeep/shim_signal.c',
     'bookkeep/shim_thread.c',
     'bookkeep/shim_vma.c',
+    'fs/chroot/encrypted.c',
     'fs/chroot/fs.c',
     'fs/dev/attestation.c',
     'fs/dev/fs.c',
@@ -26,6 +27,7 @@ libos_sources = files(
     'fs/proc/thread.c',
     'fs/shim_dcache.c',
     'fs/shim_fs.c',
+    'fs/shim_fs_encrypted.c',
     'fs/shim_fs_hash.c',
     'fs/shim_fs_lock.c',
     'fs/shim_fs_mem.c',
