--- a/LibOS/shim/test/regression/manifest.template
+++ b/LibOS/shim/test/regression/manifest.template
@@ -17,6 +17,7 @@ fs.mounts = [
   { path = "/bin", uri = "file:/bin" },
 
   { type = "tmpfs", path = "/mnt/tmpfs" },
+  { type = "encrypted", path = "/tmp/enc", uri = "file:tmp/enc" },
 ]
 
 sgx.thread_num = 16
@@ -42,6 +43,8 @@ sgx.insecure__protected_files_key = "ffeeddccbbaa99887766554433221100"
 sgx.protected_files = [
   "file:tmp/pf/",
 ]
+
+fs.insecure__keys.default = "00112233445566778899aabbccddeeff"
 
 # for sealed_file_mrenclave* tests
 sgx.protected_mrenclave_files = [
