--- a/Documentation/requirements.txt
+++ b/Documentation/requirements.txt
@@ -7,3 +7,8 @@ toml>=0.10
 # TODO: This shouldn't be necessary once we upgrade to newer Sphinx (Sphinx 4.2.0 is not yet
 # compatible with new docutils, but pins the docutils version by itself).
 docutils<0.18
+
+# jinja 3.1.0 removed quite a few functions used by sphinx
+# https://jinja.palletsprojects.com/en/3.1.x/changes/#version-3-1-0
+# https://github.com/pallets/jinja/pull/1544
+jinja2<3.1
