--- a/CI-Examples/ra-tls-secret-prov/secret_prov/client.manifest.template
+++ b/CI-Examples/ra-tls-secret-prov/secret_prov/client.manifest.template
@@ -18,6 +18,8 @@ fs.mounts = [
   { path = "/ca.crt", uri = "file:../ssl/ca.crt" },
 ]
 
+sys.emulate_etc_files = true
+
 sgx.enclave_size = "512M"
 sgx.debug = true
 
@@ -42,5 +44,4 @@ sgx.allowed_files = [
   "file:/etc/group",
   "file:/etc/passwd",
   "file:/etc/gai.conf",
-  "file:/etc/resolv.conf",
 ]
