--- a/pal/src/host/linux-common/meson.build
+++ b/pal/src/host/linux-common/meson.build
@@ -5,6 +5,7 @@ pal_linux_common_sources_enclave = files(
 )
 pal_linux_common_sources_host = files(
     'debug_map.c',
+    'etc_host_info.c',
     'file_utils.c',
     'main_exec_path.c',
     'proc_maps.c',
