squash! [LibOS,PAL] Introduce `etc` emulation (currently only 'resolv.conf')
[LibOS,PAL] Introduce extra runtime configuration (currently only 'resolv.conf')

To accomplish this, Gramine obtains information from the host, sanitizes it,
and stores it in the global PAL state. Later, LibOS uses it to create
a pseudo file (using pseudofs filesystem).

Signed-off-by: Mariusz Zaborski <oshogbo@invisiblethingslab.com>

--- a/CI-Examples/python/python.manifest.template
+++ b/CI-Examples/python/python.manifest.template
@@ -23,7 +23,7 @@ fs.mounts = [
 ]
 
 sys.stack.size = "2M"
-sys.emulate_etc_files = true
+sys.enable_extra_runtime_domain_names_conf = true
 
 sgx.debug = true
 sgx.nonpie_binary = true
