--- a/CI-Examples/ra-tls-secret-prov/secret_prov/client.manifest.template
+++ b/CI-Examples/ra-tls-secret-prov/secret_prov/client.manifest.template
@@ -18,7 +18,7 @@ fs.mounts = [
   { path = "/ca.crt", uri = "file:../ssl/ca.crt" },
 ]
 
-sys.emulate_etc_files = true
+sys.enable_extra_runtime_domain_names_conf = true
 
 sgx.enclave_size = "512M"
 sgx.debug = true
